--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,6 +14,9 @@ RUN CGO_ENABLED=0 go build -o momo-store ./cmd/api
 # Stage 2: Minimal runtime image
 FROM gcr.io/distroless/static-debian12
 
+RUN addgroup -g 1001 -S mygroup && \
+    adduser -u 1001 -S myuser -G mygroup
+
 # Создаём рабочую директорию
 WORKDIR /app
 
@@ -21,7 +24,8 @@ WORKDIR /app
 COPY --from=builder /app/momo-store .
 
 # Создаём непривилегированного пользователя
-RUN adduser --disabled-password --gecos '' myuser
+#RUN adduser --disabled-password --gecos '' myuser
+
 USER myuser
 EXPOSE 8080
 
