--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
-    image: my-app-frontend:1.0
+    image: my-app-frontend:latest
     container_name: app-frontend
     ports:
       - "80:80"
@@ -26,7 +26,7 @@ services:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    image: my-app-backend:1.0
+    image: my-app-backend:latest
     container_name: app-backend
     ports:
       - "8080:8080"
