--- a/frontend/.dockerignore
+++ b/frontend/.dockerignore
@@ -1,2 +1,18 @@
+node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 .git
+.gitignore
+.github
+.vscode
+*.md
+Dockerfile
+.DS_Store
+dist
+coverage
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local 
