--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,11 +18,12 @@ FROM nginx:1.25-alpine
 RUN rm -rf /etc/nginx/conf.d
 
 # Копируем наш dist
+RUN rm -rf /usr/share/nginx/html
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
-
 # Копируем кастомную конфигурацию Nginx
-COPY nginx.conf /etc/nginx/nginx.conf
+#COPY --from=builder /usr/src/app/nginx.conf /etc/nginx/nginx.conf
+#COPY --from=builder /usr/src/app/default.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 80
+EXPOSE 8081
 
 CMD ["nginx", "-g", "daemon off;"]
