--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,31 @@
-user nginx;
-worker_processes auto;
-error_log /var/log/nginx/error.log notice;
-pid /var/run/nginx.pid;
-events {
-    worker_connections 1024;
+upstream frontend_upstream {
+    server frontend:80;
 }
 
-http {
-    include /etc/nginx/mime.types;
-    default_type application/octet-stream;
-    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
-    '$status $body_bytes_sent "$http_referer" '
-    '"$http_user_agent" "$http_x_forwarded_for"';
-    access_log /var/log/nginx/access.log main;
-    sendfile on;
-    keepalive_timeout 65;
-    include /etc/nginx/conf.d/*.conf;
+upstream backend_upstream {
+    server backend:8081;
+}
+
+server {
+    listen 80 default_server;
+    listen [::]:80 default_server;
+    server_name _;
+
+    location = / {
+        return 302 /momo-store/;
+    }
+
+    # Раздаём SPA, собранную с publicPath=/momo-store/
+    location /momo-store/ {
+        proxy_pass http://frontend_upstream/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # API-запросы проксируем на backend
+    location /api/ {
+        proxy_pass http://backend_upstream/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 }
