--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,31 +1,40 @@
-upstream frontend_upstream {
-    server frontend:80;
-}
-
-upstream backend_upstream {
-    server backend:8081;
-}
-
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name _;
+    listen 80;
+    server_name localhost;
+    root /usr/share/nginx/html;
+    index index.html;
 
-    location = / {
-        return 302 /momo-store/;
+    # Заголовки безопасности
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-XSS-Protection "1; mode=block";
+    add_header X-Content-Type-Options "nosniff";
+    add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' http://backend:8081";
+    add_header Referrer-Policy "strict-origin-when-cross-origin";
+
+    # Раздача статических файлов
+    location / {
+        try_files $uri $uri/ /index.html;
+        expires 1d;
+        add_header Cache-Control "public, max-age=86400";
     }
 
-    # Раздаём SPA, собранную с publicPath=/momo-store/
-    location /momo-store/ {
-        proxy_pass http://frontend_upstream/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    # API-запросы проксируем на backend
+    # Проксирование API-запросов на бэкенд
     location /api/ {
-        proxy_pass http://backend_upstream/;
+        proxy_pass http://backend:8081/;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Страницы ошибок
+    error_page 404 /index.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
