--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -21,8 +21,9 @@ RUN rm -rf /etc/nginx/conf.d
 RUN rm -rf /usr/share/nginx/html
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
 # Копируем кастомную конфигурацию Nginx
-COPY --from=builder /usr/src/app/nginx.conf /etc/nginx/nginx.conf
+#COPY --from=builder /usr/src/app/nginx.conf /etc/nginx/nginx.conf
 #COPY --from=builder /usr/src/app/default.conf /etc/nginx/conf.d/default.conf
+COPY --from=builder nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 8081
 
