--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-ARG NODE_VERSION=16.18.0
+ARG NODE_VERSION=16
 ARG VUE_APP_API_URL=/momo-store/
 
 FROM node:${NODE_VERSION}-alpine AS builder
@@ -8,17 +8,16 @@ WORKDIR /usr/src/app
 
 # Копируем остальной код и собираем
 COPY . .
-RUN npm install
-RUN npm run build
+RUN npx browserslist@latest --update-db && npm install && npm run build
 
 # Stage 2: Serve with nginx
 FROM nginx:1.25-alpine
 
 # Убираем дефолтную конфигурацию
-RUN rm -rf /etc/nginx/conf.d
+#RUN rm -rf /etc/nginx/conf.d
 
 # Копируем наш dist
-RUN rm -rf /usr/share/nginx/html
+#RUN rm -rf /usr/share/nginx/html
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
 # Копируем кастомную конфигурацию Nginx
 #COPY --from=builder /usr/src/app/nginx.conf /etc/nginx/nginx.conf
