--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -11,24 +11,15 @@ server {
     add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self'; connect-src 'self' http://backend:8081";
     add_header Referrer-Policy "strict-origin-when-cross-origin";
 
-    # Раздача статических файлов
+
     location / {
+        root /usr/share/nginx/html;
+        index index.html;
         try_files $uri $uri/ /index.html;
-        expires 1d;
-        add_header Cache-Control "public, max-age=86400";
     }
 
-    # Проксирование API-запросов на бэкенд
-    location /api/ {
-        proxy_pass http://backend:8081/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_cache_bypass $http_upgrade;
+    location ~ /(orders|categories|products|auth|metrics) {
+        proxy_pass http://backend:8081;
     }
 
     # Страницы ошибок
