--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,5 @@
-ARG NODE_VERSION=16
+
+ARG NODE_VERSION=18
 #ARG VUE_APP_API_URL=/momo-store/
 
 FROM node:${NODE_VERSION}-alpine AS builder
@@ -6,9 +7,17 @@ FROM node:${NODE_VERSION}-alpine AS builder
 
 WORKDIR /usr/src/app
 
+COPY package*.json .
+RUN npm ci
+
 # Копируем остальной код и собираем
 COPY . .
-RUN npx browserslist@latest --update-db && npm install && npm run build
+#RUN npx browserslist@latest --update-db && npm install && npm run build
+ENV NODE_ENV=production
+ENV VUE_APP_API_URL=/api
+ENV NODE_OPTIONS=--openssl-legacy-provider
+
+RUN npm run build
 
 # Stage 2: Serve with nginx
 FROM nginx:1.25-alpine
