--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     networks:
       - app-network
     restart: unless-stopped
-    #environment:
-    #  - VUE_APP_API_URL=http://backend:8081
+    environment:
+      - VUE_APP_API_URL=http://backend:8081
     depends_on:
       - backend
     healthcheck:
