--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - app-network
     restart: unless-stopped
     environment:
-      - VUE_APP_API_URL=http://backend:8081
+      - VUE_APP_API_URL=http://backend:8081/momo-store/
     depends_on:
       - backend
     healthcheck:
