--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,7 +18,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /api/ {
+    location /momo-store/ {
         proxy_pass http://backend:8081/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
