--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -26,7 +26,7 @@ FROM nginx:1.25-alpine
 #RUN rm -rf /etc/nginx/conf.d
 
 # Копируем наш dist
-#RUN rm -rf /usr/share/nginx/html
+RUN rm -rf /usr/share/nginx/html
 COPY --from=builder /usr/src/app/dist /usr/share/nginx/html
 # Копируем кастомную конфигурацию Nginx
 #COPY --from=builder /usr/src/app/nginx.conf /etc/nginx/nginx.conf
