--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,29 +1,16 @@
 server {
-  listen 80;
-
-  location /categories {
-    proxy_pass http://backend:8081;    
-  }
+    listen 80;
   
-  location /products {
-    proxy_pass http://backend:8081;    
-  }
+    location / {
+      root   /usr/share/nginx/html;
+      index  index.html;
+      try_files $uri $uri/ /index.html;
+    }
   
-  location /auth {
-    proxy_pass http://backend:8081;    
+    location /momo-store {
+      rewrite /momo-store/(.*) /$1  break;
+      proxy_pass http://backend:8081;
+      proxy_redirect     off;
+      proxy_set_header   Host $host;
+    }
   }
-  
-  location /metrics {
-    proxy_pass http://backend:8081;    
-  }
-  
-  location /orders {
-    proxy_pass http://backend:8081;    
-  }
-
-  location / {
-    root /usr/share/nginx/html;
-    index index.html;
-    try_files $uri $uri/ /index.html;
-  }
-}
