--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
     networks:
       - app-network
     restart: unless-stopped
-    environment:
-      - VUE_APP_API_URL=http://backend:8081/momo-store/
+    #environment:
+    #  - VUE_APP_API_URL=http://backend:8081/momo-store/
     depends_on:
       - backend
     healthcheck:
@@ -32,8 +32,8 @@ services:
     container_name: app-backend
     ports:
       - "8081:8081"
-    environment:
-      - PORT=8081
+    #environment:
+    #  - PORT=8081
     networks:
       - app-network
     restart: unless-stopped
