--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,16 +1,54 @@
-server {
-    listen 80;
-  
+  server {
+    listen       80;
+    server_name  localhost;
+
+    gzip on;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    gzip_min_length 1000;
+    gzip_comp_level 6;
+    
+    root   /usr/share/nginx/html;
+
+    # Проксирование API запросов через /momo-store/ к бэкенду
+    location ~ ^/momo-store/(orders|categories|products|auth|metrics)/ {
+        # Обрезаем префикс /momo-store/ и проксируем запрос на бэкенд
+        rewrite ^/momo-store/(.*)$ /$1 break;
+        proxy_pass http://backend:8081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Проксирование запросов к auth API
+    location ~ ^/auth/ {
+        proxy_pass http://backend:8081;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Статические файлы с долгим кешированием
+    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
+    }
+
+    # Обработка всех маршрутов внутри /momo-store/
+    location /momo-store/ {
+        root   /usr/share/nginx/html;
+        try_files $uri $uri/ /momo-store/index.html;
+        index  index.html;
+    }
+
     location / {
-      root   /usr/share/nginx/html;
-      index  index.html;
-      try_files $uri $uri/ /index.html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
     }
-  
-    location /momo-store {
-      rewrite /momo-store/(.*) /$1  break;
-      proxy_pass http://backend:8081;
-      proxy_redirect     off;
-      proxy_set_header   Host $host;
+
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+        root   /usr/share/nginx/html;
     }
-  }
+}
