--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -10,7 +10,7 @@
     root   /usr/share/nginx/html;
 
     # Проксирование API запросов через /momo-store/ к бэкенду
-    location ~ ^/momo-store/(orders|categories|products|auth|metrics)/ {
+    location ~ ^/(orders|categories|products|auth|metrics)/ {
         # Обрезаем префикс /momo-store/ и проксируем запрос на бэкенд
         rewrite ^/momo-store/(.*)$ /$1 break;
         proxy_pass http://backend:8081;
