remove comments, add wget for healthcheck

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,29 +1,16 @@
 # Stage 1: Build the Go application
 FROM golang:1.23 AS builder
-
 WORKDIR /app
-
-# Копируем только go.mod/go.sum для кэширования зависимостей
 COPY go.mod go.sum ./
 RUN go mod download
-
-# Копируем исходный код и компилируем
 COPY . .
 RUN CGO_ENABLED=0 go build -o /go/bin/app ./cmd/api
 
 # Stage 2: Minimal runtime image
 FROM gcr.io/distroless/static-debian12
-
-# Создаём рабочую директорию
 WORKDIR /app
-
-# Копируем бинарник из предыдущего этапа
 COPY --from=builder /go/bin/app .
-
-# Используем UID 65532 (nobody)
+COPY --from=builder /bin/wget /usr/bin/wget
 USER 65532:65532
-
 EXPOSE 8081
-
-# Запускаем приложение
 CMD ["/app/app"]
