--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,19 +40,16 @@ services:
       - no-new-privileges:true
     ports:
       - "8081:8081"
-    #environment:
-    #  - PORT=8081
     networks:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "sh", "-c", "wget -qO- http://localhost:8081/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 20s
+      test: ["CMD", "wget", "--spider", "http://localhost:8081/health"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
-# ==================== NETWORKS ====================
 networks:
   app-network:
     driver: bridge
