--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 services:
 
-  # ==================== FRONTEND ====================
   frontend:
     build:
       context: ./frontend
@@ -16,18 +15,15 @@ services:
     networks:
       - app-network
     restart: unless-stopped
-    #environment:
-    #  - VUE_APP_API_URL=http://backend:8081/momo-store/
     depends_on:
       - backend
     healthcheck:
-      test: ["CMD", "sh", "-c", "echo 'Frontend health check OK' && exit 0"]
+      test: ["CMD", "curl", "-f", "http://localhost/"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 20s
+      start_period: 40s
 
-  # ==================== BACKEND ====================
   backend:
     build:
       context: ./backend
@@ -44,11 +40,11 @@ services:
       - app-network
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "wget", "--spider", "http://localhost:8081/health"]
-      interval: 15s
-      timeout: 5s
-      retries: 5
-      start_period: 10s
+      test: ["CMD", "curl", "-f", "http://localhost:8081/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 networks:
   app-network:
