--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -13,4 +13,9 @@ COPY --from=builder --chown=65532:65532 /go/bin/app .
 COPY --from=builder --chown=65532:65532 /usr/bin/curl /usr/bin/curl
 USER 65532:65532
 EXPOSE 8081
+
+HEALTHCHECK --interval=10s \
+            --timeout=5s \
+            CMD ["/usr/bin/curl", "-f", "http://localhost:8081/health"]
+
 CMD ["/app/app"]
