--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,13 +5,16 @@ COPY go.mod go.sum ./
 RUN go mod download
 COPY . .
 RUN CGO_ENABLED=0 go build -o /go/bin/app ./cmd/api
-RUN chmod a+x /usr/bin/curl
+#RUN chmod a+x /usr/bin/curl
+ADD https://github.com/jungsoft/docker-healthcheck/releases/download/0.1.0/healthcheck_alpine_amd64 /usr/local/bin/healthcheck
+RUN chmod +x /usr/local/bin/healthcheck
+
 
 # Stage 2: Minimal runtime image
 FROM gcr.io/distroless/static-debian12
 WORKDIR /app
 COPY --from=builder --chown=65532:65532 /go/bin/app .
-COPY --from=builder --chown=65532:65532 /usr/bin/curl .
+COPY --from=builder --chown=65532:65532 /usr/local/bin/healthcheck /usr/local/bin/healthcheck
 
 
 
@@ -20,6 +23,6 @@ EXPOSE 8081
 
 HEALTHCHECK --interval=10s \
             --timeout=5s \
-            CMD ["/app/curl", "-f", "http://localhost:8081/health"]
+            CMD ["/usr/local/bin/healthcheck", "-f", "http://localhost:8081/health"]
 
 CMD ["/app/app"]
