--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,14 @@ services:
     networks:
       - app-network
     restart: unless-stopped
+    environment:
+      - PORT=8081
+    healthcheck:
+      test: /usr/local/bin/healthcheck http://localhost:8081/health || exit 1
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
 
 networks:
   app-network:
