--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,16 +8,19 @@ RUN CGO_ENABLED=0 go build -o /go/bin/app ./cmd/api
 #RUN chmod a+x /usr/bin/curl
 #ADD https://github.com/jungsoft/docker-healthcheck/releases/download/0.1.0/healthcheck_alpine_amd64 /usr/local/bin/healthcheck
 #RUN chmod +x /usr/local/bin/healthcheck
-ADD --chown=65532:65532 https://github.com/jungsoft/docker-healthcheck/releases/download/0.1.0/healthcheck_alpine_amd64 /usr/local/bin/healthcheck
-RUN chmod a+x /usr/local/bin/healthcheck
+#ADD --chown=65532:65532 https://github.com/jungsoft/docker-healthcheck/releases/download/0.1.0/healthcheck_alpine_amd64 /usr/local/bin/healthcheck
+#RUN chmod a+x /usr/local/bin/healthcheck
 
+# Stage 2: Add healthcheck tools
+FROM alpine:3.19 AS healthchecker
+RUN apk add --no-cache wget
 
 # Stage 2: Minimal runtime image
 FROM gcr.io/distroless/static-debian12
 
 WORKDIR /app
 COPY --from=builder --chown=65532:65532 /go/bin/app .
-COPY --from=builder --chown=65532:65532 /usr/local/bin/healthcheck /usr/local/bin/healthcheck
+COPY --from=healthchecker /usr/bin/wget /usr/bin/wget
 
 USER 65532:65532
 EXPOSE 8081
