--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,11 +39,11 @@ services:
     networks:
       - app-network
     restart: unless-stopped
-    environment:
-      - PORT=8081
+    #environment:
+    #  - PORT=8081
     healthcheck:
       #test: /usr/local/bin/healthcheck http://localhost:8081/health || exit 1
-      test: ["CMD", "wget", "--no-check-certificate", "-qO-", "http://localhost:8081/health"]
+      test: ["CMD", "/usr/bin/curl", "--fail", "http://localhost:8081/health"]
       #test: ["CMD", "cat", "/etc/os-release"]
       interval: 30s
       timeout: 10s
