--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -23,12 +23,12 @@ RUN apt update && \
 #RUN apk add --no-cache wget
 
 # Stage 2: Minimal runtime image
-FROM gcr.io/distroless/static-debian12
+FROM gcr.io/distroless/base-debian12
 
 WORKDIR /app
 COPY --from=builder --chown=65532:65532 /go/bin/app .
-COPY --from=healthchecker /usr/bin/curl /bin/curl
-COPY --from=healthchecker /bin/bash /bin/bash
+COPY --from=healthchecker --chown=65532:65532 /usr/bin/curl /usr/bin/curl
+#COPY --from=healthchecker /bin/bash /bin/bash
 
 #COPY --from=busybox:1.35.0-uclibc /bin/sh /bin/sh
 
