--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,7 +43,7 @@ services:
     #  - PORT=8081
     healthcheck:
       #test: /usr/local/bin/healthcheck http://localhost:8081/health || exit 1
-      test: ["CMD", "/usr/bin/curl", "--fail", "http://localhost:8081/health"]
+      test: ["CMD", "/usr/bin/curl", "--fail", "-X", "GET", "http://localhost:8081/health"]
       #test: ["CMD", "cat", "/etc/os-release"]
       interval: 30s
       timeout: 10s
