--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -62,14 +62,24 @@ jobs:
             vuln-type: os,library
 
         - name: Generate SBOM for Backend with Syft
-          run: |
-            syft ${{ secrets.DOCKER_USER }}/docker-project-backend:latest -o json > sbom-backend.json
           uses: anchore/syft@v0.42.0
+          with:
+            image: ${{ secrets.DOCKER_USER }}/docker-project-backend:latest
+            output: sbom-backend.json
 
         - name: Generate SBOM for Frontend with Syft
-          run: |
-            syft ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest -o json > sbom-frontend.json
           uses: anchore/syft@v0.42.0
+          with:
+            image: ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest
+            output: sbom-frontend.json
+
+        - name: Upload SBOM files
+          uses: actions/upload-artifact@v3
+          with:
+            name: sboms
+            path: |
+              sbom-backend.json
+              sbom-frontend.json
 
   run-with-docker-compose:
     name: Push Docker image to DockerHub
