--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,7 +10,7 @@ RUN CGO_ENABLED=0 go build -o /go/bin/app ./cmd/api
 FROM busybox:uclibc AS busybox
 
 # Stage 3: Minimal runtime image
-FROM gcr.io/distroless/static-debian12
+FROM gcr.io/distroless/static-debian12:nonroot
 
 WORKDIR /app
 COPY --from=builder --chown=65532:65532 /go/bin/app .
