--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -7,6 +7,8 @@ on:
 
 jobs:
   build_and_push_to_docker_hub:
+      actions: read
+      contents: write
       name: Push Docker image to DockerHub
       runs-on: ubuntu-latest
       steps:
@@ -68,21 +70,15 @@ jobs:
           uses: anchore/sbom-action@v0
           with:
             image: ${{ secrets.DOCKER_USER }}/docker-project-backend:latest
-            output: sbom-backend.json
 
         - name: Generate SBOM for Frontend with Syft
           uses: anchore/sbom-action@v0
           with:
             image: ${{ secrets.DOCKER_USER }}/docker-project-frontend:latest
-            output: sbom-frontend.json
 
-        - name: Upload SBOM files
-          uses: actions/upload-artifact@v4
+        - uses: anchore/sbom-action/publish-sbom@v0
           with:
-            name: sboms
-            path: |
-              sbom-backend.json
-              sbom-frontend.json
+            sbom-artifact-match: ".*\\.spdx$"
 
   run-with-docker-compose:
     name: Push Docker image to DockerHub
